--- a/portfolio-chat-room/build.gradle
+++ b/portfolio-chat-room/build.gradle
@@ -1,11 +1,11 @@
 plugins {
-    id 'java'
     id 'org.springframework.boot' version '3.1.0'
     id 'io.spring.dependency-management' version '1.1.0'
+    id 'java'
 }
 
-group = 'com.milton'
-version = '0.0.1-SNAPSHOT'
+group 'com.milton'
+version '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
 repositories {
@@ -18,6 +18,13 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
+    implementation 'org.webjars:webjars-locator-core'
+    implementation 'org.webjars:sockjs-client:1.0.2'
+    implementation 'org.webjars:stomp-websocket:2.3.3'
+    implementation 'org.webjars:bootstrap:3.4.1'
+    implementation 'org.webjars:jquery:3.6.4'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
